startCourse alignment fixed

--- a/Trackpi_Demo_org/frontend/src/Pages/css/startCourse.css
+++ b/Trackpi_Demo_org/frontend/src/Pages/css/startCourse.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Itim&family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 .outer-div {
-  width: 75%;
+  width: 1028px;
   height: 70px;
   border: 1px solid #E0E0E0;
   position: absolute;
@@ -71,7 +71,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px; /* add padding for spacing from edges */
+  padding: 0 20px; 
   box-sizing: border-box;
 }
 
@@ -103,11 +103,7 @@
     top: 450px;
   }
 
-  /* .outer-div {
-    left: 15%;
-    width: 70%;
-    top: 435px;
-  } */
+ 
 
   .avatar-div {
     padding-left: 60px;
@@ -120,7 +116,7 @@
   }
 
   .StartCourse2 .ml-22 {
-    margin-left: 88px; /* adjust for desktop arrow alignment */
+    margin-left: 88px; 
   }
 
   .StartCourse2 .left-63 {
