--- a/Trackpi_Demo_org/frontend/src/components/styles/CourseProgressBar.css
+++ b/Trackpi_Demo_org/frontend/src/components/styles/CourseProgressBar.css
@@ -1,5 +1,5 @@
 .custom-div {
-  width: 75%;
+  width: 1028px;
   border-radius: 30px;
   background-color: transparent;
   border: transparent;
